// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`STEP 1: Layout tests matches the dashboard regression snapshots 1`] = `
<div
  class="space-y-6"
  data-testid="dashboard-view"
>
  <div
    data-testid="alerts-section"
  />
  <div
    data-testid="kpi-section"
  >
    <section
      class="grid gap-3 sm:grid-cols-2 xl:grid-cols-4"
      data-testid="kpi-strip"
    >
      <a
        class="dashboard-card block rounded-[var(--radius)] p-4 transition hover:-translate-y-0.5 widget-enter widget-enter-delay-1"
        data-testid="kpi-card"
        href="/dashboard/admin/finance"
      >
        <div
          class="flex items-start justify-between gap-3"
        >
          <p
            class="eyebrow"
          >
            Fees Collected Today
          </p>
          <span
            class="inline-flex items-center gap-1 rounded-full border px-2 py-0.5 text-[11px] font-semibold border-success/25 bg-success-soft text-success"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-up-right h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 7h10v10"
              />
              <path
                d="M7 17 17 7"
              />
            </svg>
            0
          </span>
        </div>
        <p
          class="mt-3 text-3xl font-bold leading-none text-foreground finance-number"
          data-testid="kpi-value"
        >
          Ksh 0
        </p>
        <p
          class="mt-2 min-h-8 text-xs leading-5 text-muted"
        >
          No live receipts have been posted yet.
        </p>
        <div
          class="mt-3"
        >
          <svg
            aria-hidden="true"
            class="h-10 w-full text-success"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <polygon
              fill="currentColor"
              opacity="0.1"
              points="0,100 0,100 50,100 100,100 100,100"
            />
            <polyline
              fill="none"
              points="0,100 50,100 100,100"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </svg>
        </div>
      </a>
      <a
        class="dashboard-card block rounded-[var(--radius)] p-4 transition hover:-translate-y-0.5 widget-enter widget-enter-delay-2"
        data-testid="kpi-card"
        href="/dashboard/admin/finance"
      >
        <div
          class="flex items-start justify-between gap-3"
        >
          <p
            class="eyebrow"
          >
            Total Fees This Term
          </p>
          <span
            class="inline-flex items-center gap-1 rounded-full border px-2 py-0.5 text-[11px] font-semibold border-success/25 bg-success-soft text-success"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-up-right h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 7h10v10"
              />
              <path
                d="M7 17 17 7"
              />
            </svg>
            0
          </span>
        </div>
        <p
          class="mt-3 text-3xl font-bold leading-none text-foreground finance-number"
          data-testid="kpi-value"
        >
          Ksh 0
        </p>
        <p
          class="mt-2 min-h-8 text-xs leading-5 text-muted"
        >
          No live invoices have been created yet.
        </p>
        <div
          class="mt-3"
        >
          <svg
            aria-hidden="true"
            class="h-10 w-full text-success"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <polygon
              fill="currentColor"
              opacity="0.1"
              points="0,100 0,100 50,100 100,100 100,100"
            />
            <polyline
              fill="none"
              points="0,100 50,100 100,100"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </svg>
        </div>
      </a>
      <a
        class="dashboard-card block rounded-[var(--radius)] p-4 transition hover:-translate-y-0.5 widget-enter widget-enter-delay-3"
        data-testid="kpi-card"
        href="/dashboard/admin/finance"
      >
        <div
          class="flex items-start justify-between gap-3"
        >
          <p
            class="eyebrow"
          >
            Outstanding Balance
          </p>
          <span
            class="inline-flex items-center gap-1 rounded-full border px-2 py-0.5 text-[11px] font-semibold border-warning/25 bg-warning-soft text-warning"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-down-right h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m7 7 10 10"
              />
              <path
                d="M17 7v10H7"
              />
            </svg>
            0
          </span>
        </div>
        <p
          class="mt-3 text-3xl font-bold leading-none text-foreground finance-number"
          data-testid="kpi-value"
        >
          Ksh 0
        </p>
        <p
          class="mt-2 min-h-8 text-xs leading-5 text-muted"
        >
          No outstanding balances exist yet.
        </p>
        <div
          class="mt-3"
        >
          <svg
            aria-hidden="true"
            class="h-10 w-full text-warning"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <polygon
              fill="currentColor"
              opacity="0.1"
              points="0,100 0,100 50,100 100,100 100,100"
            />
            <polyline
              fill="none"
              points="0,100 50,100 100,100"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </svg>
        </div>
      </a>
      <a
        class="dashboard-card block rounded-[var(--radius)] p-4 transition hover:-translate-y-0.5 widget-enter widget-enter-delay-4"
        data-testid="kpi-card"
        href="/dashboard/admin/students"
      >
        <div
          class="flex items-start justify-between gap-3"
        >
          <p
            class="eyebrow"
          >
            Students with Balance
          </p>
          <span
            class="inline-flex items-center gap-1 rounded-full border px-2 py-0.5 text-[11px] font-semibold border-warning/25 bg-warning-soft text-warning"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-down-right h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m7 7 10 10"
              />
              <path
                d="M17 7v10H7"
              />
            </svg>
            0
          </span>
        </div>
        <p
          class="mt-3 text-3xl font-bold leading-none text-foreground finance-number"
          data-testid="kpi-value"
        >
          0
        </p>
        <p
          class="mt-2 min-h-8 text-xs leading-5 text-muted"
        >
          No students have been onboarded yet.
        </p>
        <div
          class="mt-3"
        >
          <svg
            aria-hidden="true"
            class="h-10 w-full text-warning"
            preserveAspectRatio="none"
            viewBox="0 0 100 100"
          >
            <polygon
              fill="currentColor"
              opacity="0.1"
              points="0,100 0,100 50,100 100,100 100,100"
            />
            <polyline
              fill="none"
              points="0,100 50,100 100,100"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </svg>
        </div>
      </a>
    </section>
  </div>
  <div
    data-testid="quick-actions-section"
  >
    <section
      class="dashboard-card  p-4"
      data-testid="quick-actions"
    >
      <div
        class="flex items-center justify-between gap-3 mb-3"
      >
        <h3
          class="section-title"
        >
          Quick actions
        </h3>
        <span
          class="badge badge-neutral"
        >
          All available
        </span>
      </div>
      <div
        class="grid gap-2 sm:grid-cols-2 xl:grid-cols-4"
      >
        <button
          class="group flex items-center gap-3 rounded-[var(--radius-sm)] border px-3 py-2.5 text-left transition-all duration-150 border-border bg-surface hover:border-accent/20 hover:bg-accent-ghost active:scale-[0.98]"
          data-testid="quick-action"
          type="button"
        >
          <div
            class="flex h-8 w-8 shrink-0 items-center justify-center rounded-[var(--radius-xs)] bg-accent-soft"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-user-plus h-4 w-4 text-accent"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="9"
                cy="7"
                r="4"
              />
              <line
                x1="19"
                x2="19"
                y1="8"
                y2="14"
              />
              <line
                x1="22"
                x2="16"
                y1="11"
                y2="11"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <h4
              class="text-[13px] font-semibold text-foreground"
            >
              Add Student
            </h4>
            <p
              class="text-[10px] uppercase tracking-wider text-muted"
            >
              Online only
            </p>
          </div>
        </button>
        <button
          class="group flex items-center gap-3 rounded-[var(--radius-sm)] border px-3 py-2.5 text-left transition-all duration-150 border-border bg-surface hover:border-accent/20 hover:bg-accent-ghost active:scale-[0.98]"
          data-testid="quick-action"
          type="button"
        >
          <div
            class="flex h-8 w-8 shrink-0 items-center justify-center rounded-[var(--radius-xs)] bg-accent-soft"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-credit-card h-4 w-4 text-accent"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                width="20"
                x="2"
                y="5"
              />
              <line
                x1="2"
                x2="22"
                y1="10"
                y2="10"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <h4
              class="text-[13px] font-semibold text-foreground"
            >
              Record Payment
            </h4>
            <p
              class="text-[10px] uppercase tracking-wider text-muted"
            >
              Online only
            </p>
          </div>
        </button>
        <button
          class="group flex items-center gap-3 rounded-[var(--radius-sm)] border px-3 py-2.5 text-left transition-all duration-150 border-border bg-surface hover:border-accent/20 hover:bg-accent-ghost active:scale-[0.98]"
          data-testid="quick-action"
          type="button"
        >
          <div
            class="flex h-8 w-8 shrink-0 items-center justify-center rounded-[var(--radius-xs)] bg-accent-soft"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-up-right h-4 w-4 text-accent"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 7h10v10"
              />
              <path
                d="M7 17 17 7"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <h4
              class="text-[13px] font-semibold text-foreground"
            >
              Adjust Stock
            </h4>
            <p
              class="text-[10px] uppercase tracking-wider text-muted"
            >
              Online only
            </p>
          </div>
        </button>
        <button
          class="group flex items-center gap-3 rounded-[var(--radius-sm)] border px-3 py-2.5 text-left transition-all duration-150 border-border bg-surface hover:border-accent/20 hover:bg-accent-ghost active:scale-[0.98]"
          data-testid="quick-action"
          type="button"
        >
          <div
            class="flex h-8 w-8 shrink-0 items-center justify-center rounded-[var(--radius-xs)] bg-accent-soft"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-up-right h-4 w-4 text-accent"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 7h10v10"
              />
              <path
                d="M7 17 17 7"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <h4
              class="text-[13px] font-semibold text-foreground"
            >
              Create PO
            </h4>
            <p
              class="text-[10px] uppercase tracking-wider text-muted"
            >
              Online only
            </p>
          </div>
        </button>
      </div>
    </section>
  </div>
  <section
    class="grid gap-6 xl:grid-cols-12"
    data-testid="core-widgets"
  >
    <div
      class="xl:col-span-7"
      data-testid="core-widget"
    >
      <div>
        <section
          class="dashboard-card  overflow-hidden"
        >
          <div
            class="border-b border-border bg-surface px-5 py-3.5"
          >
            <div
              class="flex items-center justify-between gap-4"
            >
              <div
                class="min-w-0"
              >
                <h3
                  class="section-title text-lg"
                >
                  M-PESA feed
                </h3>
                <p
                  class="mt-0.5 text-[13px] text-muted line-clamp-1"
                >
                  Fresh transactions that bursars usually need to verify first.
                </p>
              </div>
            </div>
          </div>
          <div
            class="px-5 py-10"
          >
            <div
              class="rounded-[var(--radius)] border border-dashed border-border bg-primary-soft/35 px-6 py-10 text-center backdrop-blur"
            >
              <div
                class="mx-auto flex h-12 w-12 items-center justify-center rounded-full border border-border bg-surface-strong/80"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-inbox h-5 w-5 text-muted"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="22 12 16 12 14 15 10 15 8 12 2 12"
                  />
                  <path
                    d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
                  />
                </svg>
              </div>
              <p
                class="mt-4 eyebrow"
              >
                Nothing yet
              </p>
              <h3
                class="mt-2 text-[15px] font-semibold text-foreground"
              >
                Nothing to show yet
              </h3>
              <p
                class="mt-1.5 text-[13px] leading-relaxed text-muted max-w-sm mx-auto"
              >
                No records available.
              </p>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      class="space-y-6 xl:col-span-5"
    >
      <div
        data-testid="context-section"
      >
        <section
          class="dashboard-card  p-5"
        >
          <div
            class="flex items-end justify-between gap-3"
          >
            <div>
              <p
                class="eyebrow"
              >
                Defaulters
              </p>
              <h3
                class="mt-2 section-title text-lg"
              >
                Students with balances
              </h3>
            </div>
            <a
              class="text-sm font-semibold text-accent"
              href="/dashboard/admin/students"
            >
              View all
            </a>
          </div>
          <div
            class="mt-4 space-y-3"
          />
        </section>
      </div>
      <div
        data-testid="activity-feed-section"
      >
        <section
          class="dashboard-card  p-4"
          data-testid="activity-feed"
        >
          <div
            class="flex items-center justify-between gap-3 mb-3"
          >
            <h3
              class="section-title"
            >
              Recent activity
            </h3>
            <span
              class="badge badge-neutral"
            >
              0
               events
            </span>
          </div>
          <div
            class="space-y-1"
          />
        </section>
      </div>
    </div>
  </section>
</div>
`;

exports[`STEP 1: Layout tests matches the dashboard regression snapshots 2`] = `
<section
  class="grid gap-3 sm:grid-cols-2 xl:grid-cols-4"
  data-testid="kpi-strip"
>
  <a
    class="dashboard-card block rounded-[var(--radius)] p-4 transition hover:-translate-y-0.5 widget-enter widget-enter-delay-1"
    data-testid="kpi-card"
    href="/dashboard/admin/finance"
  >
    <div
      class="flex items-start justify-between gap-3"
    >
      <p
        class="eyebrow"
      >
        Fees Collected Today
      </p>
      <span
        class="inline-flex items-center gap-1 rounded-full border px-2 py-0.5 text-[11px] font-semibold border-success/25 bg-success-soft text-success"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-up-right h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7h10v10"
          />
          <path
            d="M7 17 17 7"
          />
        </svg>
        0
      </span>
    </div>
    <p
      class="mt-3 text-3xl font-bold leading-none text-foreground finance-number"
      data-testid="kpi-value"
    >
      Ksh 0
    </p>
    <p
      class="mt-2 min-h-8 text-xs leading-5 text-muted"
    >
      No live receipts have been posted yet.
    </p>
    <div
      class="mt-3"
    >
      <svg
        aria-hidden="true"
        class="h-10 w-full text-success"
        preserveAspectRatio="none"
        viewBox="0 0 100 100"
      >
        <polygon
          fill="currentColor"
          opacity="0.1"
          points="0,100 0,100 50,100 100,100 100,100"
        />
        <polyline
          fill="none"
          points="0,100 50,100 100,100"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="4"
        />
      </svg>
    </div>
  </a>
  <a
    class="dashboard-card block rounded-[var(--radius)] p-4 transition hover:-translate-y-0.5 widget-enter widget-enter-delay-2"
    data-testid="kpi-card"
    href="/dashboard/admin/finance"
  >
    <div
      class="flex items-start justify-between gap-3"
    >
      <p
        class="eyebrow"
      >
        Total Fees This Term
      </p>
      <span
        class="inline-flex items-center gap-1 rounded-full border px-2 py-0.5 text-[11px] font-semibold border-success/25 bg-success-soft text-success"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-up-right h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7h10v10"
          />
          <path
            d="M7 17 17 7"
          />
        </svg>
        0
      </span>
    </div>
    <p
      class="mt-3 text-3xl font-bold leading-none text-foreground finance-number"
      data-testid="kpi-value"
    >
      Ksh 0
    </p>
    <p
      class="mt-2 min-h-8 text-xs leading-5 text-muted"
    >
      No live invoices have been created yet.
    </p>
    <div
      class="mt-3"
    >
      <svg
        aria-hidden="true"
        class="h-10 w-full text-success"
        preserveAspectRatio="none"
        viewBox="0 0 100 100"
      >
        <polygon
          fill="currentColor"
          opacity="0.1"
          points="0,100 0,100 50,100 100,100 100,100"
        />
        <polyline
          fill="none"
          points="0,100 50,100 100,100"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="4"
        />
      </svg>
    </div>
  </a>
  <a
    class="dashboard-card block rounded-[var(--radius)] p-4 transition hover:-translate-y-0.5 widget-enter widget-enter-delay-3"
    data-testid="kpi-card"
    href="/dashboard/admin/finance"
  >
    <div
      class="flex items-start justify-between gap-3"
    >
      <p
        class="eyebrow"
      >
        Outstanding Balance
      </p>
      <span
        class="inline-flex items-center gap-1 rounded-full border px-2 py-0.5 text-[11px] font-semibold border-warning/25 bg-warning-soft text-warning"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-down-right h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 7 10 10"
          />
          <path
            d="M17 7v10H7"
          />
        </svg>
        0
      </span>
    </div>
    <p
      class="mt-3 text-3xl font-bold leading-none text-foreground finance-number"
      data-testid="kpi-value"
    >
      Ksh 0
    </p>
    <p
      class="mt-2 min-h-8 text-xs leading-5 text-muted"
    >
      No outstanding balances exist yet.
    </p>
    <div
      class="mt-3"
    >
      <svg
        aria-hidden="true"
        class="h-10 w-full text-warning"
        preserveAspectRatio="none"
        viewBox="0 0 100 100"
      >
        <polygon
          fill="currentColor"
          opacity="0.1"
          points="0,100 0,100 50,100 100,100 100,100"
        />
        <polyline
          fill="none"
          points="0,100 50,100 100,100"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="4"
        />
      </svg>
    </div>
  </a>
  <a
    class="dashboard-card block rounded-[var(--radius)] p-4 transition hover:-translate-y-0.5 widget-enter widget-enter-delay-4"
    data-testid="kpi-card"
    href="/dashboard/admin/students"
  >
    <div
      class="flex items-start justify-between gap-3"
    >
      <p
        class="eyebrow"
      >
        Students with Balance
      </p>
      <span
        class="inline-flex items-center gap-1 rounded-full border px-2 py-0.5 text-[11px] font-semibold border-warning/25 bg-warning-soft text-warning"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-down-right h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 7 10 10"
          />
          <path
            d="M17 7v10H7"
          />
        </svg>
        0
      </span>
    </div>
    <p
      class="mt-3 text-3xl font-bold leading-none text-foreground finance-number"
      data-testid="kpi-value"
    >
      0
    </p>
    <p
      class="mt-2 min-h-8 text-xs leading-5 text-muted"
    >
      No students have been onboarded yet.
    </p>
    <div
      class="mt-3"
    >
      <svg
        aria-hidden="true"
        class="h-10 w-full text-warning"
        preserveAspectRatio="none"
        viewBox="0 0 100 100"
      >
        <polygon
          fill="currentColor"
          opacity="0.1"
          points="0,100 0,100 50,100 100,100 100,100"
        />
        <polyline
          fill="none"
          points="0,100 50,100 100,100"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="4"
        />
      </svg>
    </div>
  </a>
</section>
`;
